--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       href="https://fonts.googleapis.com/css2?family=Protest+Riot&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="nong.css" />
+    <link rel="stylesheet" href="style.css" />
     <title>Valentine</title>
   </head>
   <body>
@@ -22,6 +22,7 @@
       </div>
     </main>
 
-    <script type="module" src="nong.js"></script>
+    <script type="module" src="script.js"></script>
   </body>
+
 </html>
